<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:textSize="24sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/inputMinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        android:padding="20dp"
        android:textSize="22sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:hint="@string/inputMinValueHint"
        android:inputType="numberDecimal">

    </EditText>

    <EditText
        android:id="@+id/inputMaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inputMinValue"
        android:padding="20dp"
        android:textSize="22sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:hint="@string/inputMaxValueHint"
        android:inputType="numberDecimal">

    </EditText>


    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inputMaxValue"
        android:text="@string/startGameMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>